kubernetes/apps/retro/retrom/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.ajgon.casa/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: retrom-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: retrom
    egress:
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/component: database
              app.kubernetes.io/instance: retro-db
      - toFQDNs:
          - matchName: github.com
          - matchName: id.twitch.tv
          - matchName: registry.npmjs.org
          - matchName: release-assets.githubusercontent.com
          - matchPattern: "*.igdb.com"
        toPorts:
          - ports:
              - port: "443"
